--- a/debian.master/changelog
+++ b/debian.master/changelog
@@ -4,6 +4,10 @@ linux (4.20.0-0.1) UNRELEASED; urgency=medium
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Upstream Kernel Changes ]
+
+  * Rebase to v4.20-rc5
+
  -- Seth Forshee <seth.forshee@canonical.com>  Thu, 06 Dec 2018 10:22:03 -0600
 
 linux (4.20.0-0.0) disco; urgency=medium
